# OneDragon-Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/develop/core/architecture/: core_architecture.md
docs/develop/core/modules/: oda_agent.md  oda_agent_config.md  oda_agent_manager.md  oda_context.md  oda_context_config.md  oda_mcp_manager.md  oda_model_config.md  oda_session.md  oda_session_manager.md  oda_tool_manager.md  workspace_index.md
docs/develop/spec/: README.md  agent_guidelines.md
docs/sdk/: README.md  api_reference.md  basic_usage.md  concepts.md  configuration.md
docs/sdk/api_reference/: README.md  oda_agent.md  oda_agent_config.md  oda_agent_config_manager.md  oda_agent_manager.md  oda_context.md  oda_context_config.md  oda_mcp_config.md  oda_mcp_manager.md  oda_model_config.md  oda_model_config_manager.md  oda_session.md  oda_session_manager.md  oda_tool_manager.md
src/one_dragon_agent/: __init__.py
src/one_dragon_agent/core/: __init__.py
src/one_dragon_agent/core/agent/: oda_agent.py  oda_agent_manager.py
src/one_dragon_agent/core/agent/config/: base_oda_agent_config_storage.py  database_oda_agent_config_storage.py  in_memory_oda_agent_config_storage.py  oda_agent_config.py  oda_agent_config_manager.py
src/one_dragon_agent/core/algo/: trie.py
src/one_dragon_agent/core/context/: __init__.py  oda_context.py  oda_context_config.py
src/one_dragon_agent/core/model/: base_oda_model_config_storage.py  database_oda_model_config_storage.py  in_memory_oda_model_config_storage.py  oda_model_config.py  oda_model_config_manager.py
src/one_dragon_agent/core/session/: oda_session.py  oda_session_manager.py
src/one_dragon_agent/core/system/: log.py  workspace_index.py
src/one_dragon_agent/core/tool/: oda_tool_manager.py
src/one_dragon_agent/core/tool/mcp/: oda_mcp_config.py  oda_mcp_config_storage.py  oda_mcp_manager.py
tests/one_dragon_agent/core/agent/oda_agent/: test_oda_agent_mocks.py  test_oda_agent_real_runner.py
tests/one_dragon_agent/core/algo/trie/: test_trie.py
tests/one_dragon_agent/core/context/oda_context/: test_oda_context.py  test_oda_context_storage.py
tests/one_dragon_agent/core/model/base_oda_model_config_storage/: test_base_oda_model_config_storage.py
tests/one_dragon_agent/core/model/database_oda_model_config_storage/: test_database_oda_model_config_storage.py
tests/one_dragon_agent/core/model/in_memory_oda_model_config_storage/: test_in_memory_oda_model_config_storage.py
tests/one_dragon_agent/core/model/oda_model_config/: test_oda_model_config.py
tests/one_dragon_agent/core/model/oda_model_config_manager/: test_oda_model_config_manager.py
tests/one_dragon_agent/core/session/: test_oda_session_manager_create_session_integration.py  test_oda_session_manager_with_mocks.py  test_oda_session_process_message_integration.py
tests/one_dragon_agent/core/system/workspace_index/: test_file_system_events.py  test_gitignore.py  test_initialization.py  (+4 more)
(+18 files in other folders)
